# AIS-catcher-for-Android

./: .gitmodules  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
.github/workflows/: android.yml  android2.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/gh/lipis/flag-icons@6.6.6/flags/4x3/: index.html
app/src/main/java/com/jvdegithub/aiscatcher/: AisCatcherJava.java  AisService.java  DeviceManager.java  LocationHelper.java  Logs.java  MainActivity.java  Settings.java  TextLog.java
app/src/main/java/com/jvdegithub/aiscatcher/tools/: InputFilterIP.java  InputFilterMinMax.java  LogBook.java  TextLog.java
app/src/main/java/com/jvdegithub/aiscatcher/ui/main/: ConsoleLogFragment.java  MapFragment.java  NMEALogFragment.java  SectionsPagerAdapter.java  StatisticsFragment.java  WebViewMapFragment.java  WebViewPlotsFragment.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/JNI/: AIScatcherNDK.cpp
app/src/main/res/color/: bottom_navigation_colors.xml
app/src/main/res/drawable/: ic_baseline_clear_40.xml  ic_baseline_content_copy_24.xml  ic_baseline_input_40.xml  ic_baseline_play_circle_filled_40.xml  ic_baseline_settings_24.xml  ic_baseline_stop_circle_40.xml  ic_baseline_web_asset_24.xml  ic_launcher_foreground.xml  logo.xml
app/src/main/res/drawable-anydpi-v24/: ic_notif_launcher.xml
app/src/main/res/layout/: activity_main.xml  activity_preferences.xml  fragment_log.xml  fragment_map.xml  fragment_nmealog.xml  fragment_plots.xml  fragment_statistics.xml
app/src/main/res/menu/: bottom_menu.xml  toolbar_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/main/res/xml/: network_security_config.xml  preferences.xml  tool_bar.xml  usb_device_filter.xml
fastlane/metadata/android/de/: short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  video.txt
gradle/wrapper/: gradle-wrapper.properties
